<resources>
    <string name="app_name">SeniorMonitoringApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pulse">PULSE</string>
    <string name="steps">STEPS</string>
    <string name="sleep">SLEEP</string>
    <string name="contacts">CONTACTS</string>
    <string name="settings">SETTINGS</string>
    <string name="subscriptions">SUBSCRIPTIONS</string>
    <string name="reports">REPORTS</string>
    <string name="go_to_main_page">GO TO MAIN PAGE</string>
    <string name="login_with_google">Login with google</string>
</resources>